// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MovieShowPage should match snapshot when logged in and no user rating yet 1`] = `
<div
  className="movie-page"
>
  <img
    alt="Ad Astra"
    className="backdrop"
    src="https://image.tmdb.org/t/p/original//5BwqwxMEjeFtdknRV792Svo0K1v.jpg"
  />
  <h1
    className="movie__title--two"
  >
    Ad Astra
  </h1>
  <p
    className="in-theaters"
  >
    In Theaters: 
    2019-09-17
  </p>
  <p
    className="overview"
  >
    The near future, humanity to look to the stars an.....
  </p>
  <p
    className="average__rating--two"
  >
    Average Rating: 
    5.1
  </p>
  <div
    className="rating-bar"
  >
    <div
      className="rating-scale"
    >
      <button
        className="rating-btn btn-one"
        onClick={[Function]}
        value="1"
      >
        1
      </button>
      <button
        className="rating-btn btn-two"
        onClick={[Function]}
        value="2"
      >
        2
      </button>
      <button
        className="rating-btn btn-three"
        onClick={[Function]}
        value="3"
      >
        3
      </button>
      <button
        className="rating-btn btn-four"
        onClick={[Function]}
        value="4"
      >
        4
      </button>
      <button
        className="rating-btn btn-five"
        onClick={[Function]}
        value="5"
      >
        5
      </button>
      <button
        className="rating-btn btn-six"
        onClick={[Function]}
        value="6"
      >
        6
      </button>
      <button
        className="rating-btn btn-seven"
        onClick={[Function]}
        value="7"
      >
        7
      </button>
      <button
        className="rating-btn btn-eight"
        onClick={[Function]}
        value="8"
      >
        8
      </button>
      <button
        className="rating-btn btn-nine"
        onClick={[Function]}
        value="9"
      >
        9
      </button>
      <button
        className="rating-btn btn-ten"
        onClick={[Function]}
        value="10"
      >
        10
      </button>
    </div>
  </div>
</div>
`;

exports[`MovieShowPage should match snapshot when user is logged in and rating is 10 1`] = `
<div
  className="movie-page"
>
  <img
    alt="Ad Astra"
    className="backdrop"
    src="https://image.tmdb.org/t/p/original//5BwqwxMEjeFtdknRV792Svo0K1v.jpg"
  />
  <h1
    className="movie__title--two"
  >
    Ad Astra
  </h1>
  <p
    className="in-theaters"
  >
    In Theaters: 
    2019-09-17
  </p>
  <p
    className="overview"
  >
    The near future, humanity to look to the stars an.....
  </p>
  <p
    className="average__rating--two"
  >
    Average Rating: 
    5.1
  </p>
  <div
    className="already-rated"
  >
    <p
      className="top-marks"
    >
      My Rating: 
      10
    </p>
    <button
      className="reset-rating"
      onClick={[Function]}
    >
      Reset Rating
    </button>
  </div>
</div>
`;

exports[`MovieShowPage should match snapshot when user is logged in and rating is less than 10 1`] = `
<div
  className="movie-page"
>
  <img
    alt="Ad Astra"
    className="backdrop"
    src="https://image.tmdb.org/t/p/original//5BwqwxMEjeFtdknRV792Svo0K1v.jpg"
  />
  <h1
    className="movie__title--two"
  >
    Ad Astra
  </h1>
  <p
    className="in-theaters"
  >
    In Theaters: 
    2019-09-17
  </p>
  <p
    className="overview"
  >
    The near future, humanity to look to the stars an.....
  </p>
  <p
    className="average__rating--two"
  >
    Average Rating: 
    5.1
  </p>
  <div
    className="already-rated"
  >
    <p
      className="my-rating"
    >
      My Rating: 
      8
    </p>
    <button
      className="reset-rating"
      onClick={[Function]}
    >
      Reset Rating
    </button>
  </div>
</div>
`;

exports[`MovieShowPage should match the MovieShowPage Snapshot with no logged in user 1`] = `
<div
  className="movie-page"
>
  <img
    alt="Ad Astra"
    className="backdrop"
    src="https://image.tmdb.org/t/p/original//5BwqwxMEjeFtdknRV792Svo0K1v.jpg"
  />
  <h1
    className="movie__title--two"
  >
    Ad Astra
  </h1>
  <p
    className="in-theaters"
  >
    In Theaters: 
    2019-09-17
  </p>
  <p
    className="overview"
  >
    The near future, humanity to look to the stars an.....
  </p>
  <p
    className="average__rating--two"
  >
    Average Rating: 
    5.1
  </p>
</div>
`;
